--- a/public/creator/index.html
+++ b/public/creator/index.html
@@ -3,62 +3,38 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Virtual Model Hub</title>
+<title>Login / Signup - Creator</title>
 <style>
-body{margin:0;font-family:Arial, Helvetica, sans-serif;background:#111;color:white;}
-h1{text-align:center;margin:20px;}
-.loops-container{display:grid;grid-template-columns:repeat(auto-fill,minmax(300px,1fr));gap:20px;padding:20px;}
-.loop-item{background:#222;padding:10px;border-radius:10px;display:flex;flex-direction:column;align-items:center;}
-.loop-item video{width:100%;border-radius:10px;}
-.loop-item h3{margin:10px 0 5px;}
-.loop-item button{background:red;color:white;border:none;padding:10px 20px;border-radius:20px;cursor:pointer;margin-bottom:5px;}
-.loop-item button:hover{background:darkred;}
+body{font-family:Arial;background:#111;color:white;text-align:center;padding:50px;}
+input,button{padding:10px 15px;margin:5px;border:none;border-radius:5px;}
+button{background:red;color:white;cursor:pointer;}
+.message{opacity:0.8;margin-top:10px;}
 </style>
-<script src="https://unpkg.com/@supabase/supabase-js@2"></script>
-<script>
-const SUPABASE_URL = "https://uurmdzzmzwumjtanlcvz.supabase.co";
-const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InV1cm1kenptend1bWp0YW5sY3Z6Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU3MDkwNDcsImV4cCI6MjA4MTI4NTA0N30.mVQKqbk0IZbXLrWMOvOqiB9OSHJgk09Wg0DsIJs0mhA";
-const supabase = supabaseJs.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
-
-async function loadLoops(){
-    const { data: loops } = await supabase.from('loops')
-        .select('*, owner:creators(id, display_name)')
-        .eq('active', true)
-        .order('created_at',{ascending:false});
-    
-    const container = document.getElementById('loopsContainer');
-    container.innerHTML = "";
-
-    loops.forEach(loop=>{
-        const div = document.createElement('div');
-        div.className = "loop-item";
-
-        const title = document.createElement('h3');
-        title.innerText = `${loop.owner.display_name} - ${loop.name}`;
-        div.appendChild(title);
-
-        const video = document.createElement('video');
-        video.src = loop.url;
-        video.loop = true;
-        video.autoplay = true;
-        video.muted = true;
-        video.playsInline = true;
-        div.appendChild(video);
-
-        const btn = document.createElement('button');
-        btn.innerText = "Go Live 24/7";
-        btn.onclick = ()=>{ window.location.href=`/creator/live.html?user=${loop.owner.id}`; };
-        div.appendChild(btn);
-
-        container.appendChild(div);
-    });
-}
-
-window.onload = loadLoops;
-</script>
 </head>
 <body>
-<h1>Virtual Model Hub · Live AI Loops 24/7</h1>
-<div class="loops-container" id="loopsContainer"></div>
+<h1>Login / Signup</h1>
+<input type="email" id="email" placeholder="Enter your email" required>
+<br>
+<button onclick="login()">Enter</button>
+<div class="message" id="msg"></div>
+
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script>
+const supabase = supabaseJs.createClient("TU_SUPABASE_URL","TU_SUPABASE_ANON_KEY");
+const msg = document.getElementById("msg");
+
+async function login(){
+  const email=document.getElementById("email").value.trim();
+  if(!email){ msg.innerText="Enter a valid email"; return; }
+  const { data, error } = await supabase.auth.signInWithOtp({ email });
+  if(error){ console.error(error); msg.innerText="Error sending login email"; return; }
+  msg.innerText="Check your email to login!";
+}
+
+// Escuchar cambios de sesión
+supabase.auth.onAuthStateChange((event, session)=>{
+  if(session) window.location.href="dashboard.html";
+});
+</script>
 </body>
 </html>
