--- a/public/creator/live.html
+++ b/public/creator/live.html
@@ -3,71 +3,53 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Live - Creator</title>
+<title>Live</title>
+
 <style>
-body{margin:0;padding:0;font-family:Arial;background:black;color:white;}
-.video-bg{position:fixed;top:0;left:0;width:100vw;height:100vh;object-fit:cover;z-index:-1;filter:brightness(0.7);}
-.overlay{position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.5);}
-.content{position:relative;width:100%;height:100%;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;padding:20px;}
-h1{font-size:3rem;margin-bottom:10px;}
-p{font-size:1.2rem;opacity:0.8;margin-bottom:20px;}
-.back-home{position:absolute;top:20px;left:20px;padding:10px 20px;background:red;color:white;text-decoration:none;border-radius:5px;}
+body{margin:0;background:black;color:white;font-family:Arial;}
+video{width:100vw;height:100vh;object-fit:cover;}
+.overlay{position:absolute;top:0;left:0;width:100%;padding:15px;background:linear-gradient(to bottom,rgba(0,0,0,.7),transparent);}
 </style>
 </head>
 <body>
 
-<div class="overlay"></div>
-<div class="content">
-  <a class="back-home" href="/index.html">← Home</a>
-  <h1 id="creatorName">Loading...</h1>
-  <video id="liveVideo" autoplay muted loop playsinline style="max-width:90vw;max-height:70vh;border-radius:10px;"></video>
-  <p>24/7 · Virtual · NSFW</p>
+<div class="overlay">
+<h2 id="title"></h2>
 </div>
 
-<!-- SUPABASE -->
+<video id="video" autoplay muted loop playsinline></video>
+
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
 const supabase = supabaseJs.createClient(
-  "https://uurmdzzmzwumjtanlcvz.supabase.co",
-  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InV1cm1kenptend1bWp0YW5sY3Z6Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU3MDkwNDcsImV4cCI6MjA4MTI4NTA0N30.mVQKqbk0IZbXLrWMOvOqiB9OSHJgk09Wg0DsIJs0mhA"
+  "TU_SUPABASE_URL",
+  "TU_SUPABASE_ANON_KEY"
 );
 
-// Obtener nombre del creator de la query string
-const urlParams = new URLSearchParams(window.location.search);
-const creator = urlParams.get("creator");
+const params = new URLSearchParams(window.location.search);
+const creator = params.get("creator");
 
-const creatorNameEl = document.getElementById("creatorName");
-const liveVideo = document.getElementById("liveVideo");
+document.getElementById("title").innerText = creator ? `🔴 LIVE · ${creator}` : "No creator";
 
-creatorNameEl.innerText = creator || "Unknown Creator";
+async function loadLive(){
+  if(!creator) return;
 
-// Cargar loop activo del creator
-async function loadLiveLoop() {
-  const { data: loops, error } = await supabase
+  const { data } = await supabase
     .from("loops")
     .select("*")
-    .eq("owner", creator)
-    .eq("active", true)
-    .order("created_at", { ascending: true })
+    .eq("owner",creator)
+    .eq("active",true)
     .limit(1);
 
-  if(error){
-    console.error(error);
-    liveVideo.poster = "";
+  if(!data || data.length===0){
+    document.body.innerHTML="<h2 style='text-align:center;margin-top:40vh;'>Creator is offline</h2>";
     return;
   }
 
-  if(!loops || loops.length === 0){
-    liveVideo.poster = "";
-    creatorNameEl.innerText = `${creator} is not live`;
-    return;
-  }
-
-  liveVideo.src = loops[0].video_url;
+  document.getElementById("video").src = data[0].video_url;
 }
 
-loadLiveLoop();
+loadLive();
 </script>
-
 </body>
 </html>
