--- a/public/creator/index.html
+++ b/public/creator/index.html
@@ -12,6 +12,7 @@ button{background:red;color:white;cursor:pointer;}
 </style>
 </head>
 <body>
+
 <h1>Login / Signup</h1>
 <input type="email" id="email" placeholder="Enter your email" required>
 <br>
@@ -20,21 +21,33 @@ button{background:red;color:white;cursor:pointer;}
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
-const supabase = supabaseJs.createClient("https://uurmdzzmzwumjtanlcvz.supabase.co","eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InV1cm1kenptend1bWp0YW5sY3Z6Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU3MDkwNDcsImV4cCI6MjA4MTI4NTA0N30.mVQKqbk0IZbXLrWMOvOqiB9OSHJgk09Wg0DsIJs0mhA");
+const supabase = supabaseJs.createClient(
+  "https://uurmdzzmzwumjtanlcvz.supabase.co",
+  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InV1cm1kenptend1bWp0YW5sY3Z6Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU3MDkwNDcsImV4cCI6MjA4MTI4NTA0N30.mVQKqbk0IZbXLrWMOvOqiB9OSHJgk09Wg0DsIJs0mhA"
+);
+
 const msg = document.getElementById("msg");
 
 async function login(){
   const email=document.getElementById("email").value.trim();
   if(!email){ msg.innerText="Enter a valid email"; return; }
-  const { data, error } = await supabase.auth.signInWithOtp({ email });
-  if(error){ console.error(error); msg.innerText="Error sending login email"; return; }
+
+  const { error } = await supabase.auth.signInWithOtp({ email });
+
+  if(error){
+    console.error(error);
+    msg.innerText="Error sending login email";
+    return;
+  }
+
   msg.innerText="Check your email to login!";
-  console.log("LOGIN CLICK");
 }
 
-// Escuchar cambios de sesión
+// Escuchar sesión activa
 supabase.auth.onAuthStateChange((event, session)=>{
-  if(session) window.location.href="dashboard.html";
+  if(session){
+    window.location.href="dashboard.html";
+  }
 });
 </script>
 </body>
