--- a/public/creator/index.html
+++ b/public/creator/index.html
@@ -12,37 +12,35 @@ button{background:red;color:white;cursor:pointer;}
 </style>
 </head>
 <body>
-
 <h1>Login / Signup</h1>
-<input type="email" id="email" placeholder="Enter your email">
+<input type="email" id="email" placeholder="Enter your email" required>
 <br>
-<button onclick="login()">Enter</button>
+<button id="loginBtn">Enter</button>
 <div class="message" id="msg"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
-const supabaseClient = supabase.createClient(
-  "https://uurmdzzmzwumjtanlcvz.supabase.co",
-  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InV1cm1kenptend1bWp0YW5sY3Z6Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU3MDkwNDcsImV4cCI6MjA4MTI4NTA0N30.mVQKqbk0IZbXLrWMOvOqiB9OSHJgk09Wg0DsIJs0mhA"
+const supabase = supabase.createClient(
+  "TU_SUPABASE_URL",
+  "TU_SUPABASE_ANON_KEY"
 );
 
 const msg = document.getElementById("msg");
-const btn = document.querySelector("button");
+const btn = document.getElementById("loginBtn");
 
-btn.addEventListener("click", async ()=>{
+btn.addEventListener("click", async () => {
     console.log("CLICK");
     const email = document.getElementById("email").value.trim();
     if(!email){ msg.innerText="Enter a valid email"; return; }
-    const { error } = await supabaseClient.auth.signInWithOtp({ email });
+
+    const { error } = await supabase.auth.signInWithOtp({ email });
     if(error){ msg.innerText="Error sending login email"; console.error(error); return; }
     msg.innerText="Check your email to login!";
 });
 
-supabaseClient.auth.onAuthStateChange((event, session)=>{
+supabase.auth.onAuthStateChange((event, session)=>{
     if(session) window.location.href="dashboard.html";
 });
 </script>
-
-
 </body>
 </html>
