--- a/public/index.html
+++ b/public/index.html
@@ -2,60 +2,45 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Virtual Model Hub</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-body{margin:0;padding:0;font-family:Arial;background:black;color:white;}
-.video-bg{position:fixed;top:0;left:0;width:100vw;height:100vh;object-fit:cover;z-index:-1;filter:brightness(0.7);}
-.overlay{position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.5);}
-.content{position:relative;width:100%;height:100%;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;padding:20px;}
-h1{font-size:3rem;margin-bottom:10px;}
-p{font-size:1.2rem;opacity:0.8;margin-bottom:20px;}
-.creators-list{display:flex;flex-wrap:wrap;justify-content:center;gap:18px;max-width:95vw;}
-.creator-card{background:rgba(255,255,255,0.06);padding:18px 22px;border-radius:18px;min-width:180px;transition:transform 0.2s ease,background 0.2s ease;backdrop-filter:blur(6px);}
-.creator-card:hover{transform:scale(1.06);background:rgba(255,255,255,0.14);}
-.creator-card a{color:white;text-decoration:none;font-weight:bold;font-size:1.15rem;}
-.live-dot{color:red;margin-right:6px;}
-.footer{position:absolute;bottom:15px;font-size:0.8rem;opacity:0.6;}
+body{background:black;color:white;font-family:Arial;text-align:center;padding:20px;}
+.creator-card{margin:10px;padding:10px;border:1px solid #333;border-radius:10px;}
+a{color:white;text-decoration:none;font-weight:bold;}
 </style>
 </head>
 <body>
-
-<video class="video-bg" autoplay muted loop playsinline>
-<source src="loop.mp4" type="video/mp4">
-</video>
-
-<div class="overlay"></div>
-<div class="content">
 <h1>Live AI Models</h1>
-<p>24/7 · Virtual · NSFW</p>
-<div class="creators-list" id="creatorsList"></div>
-<div class="footer">© Virtual Model Hub · 18+ Only</div>
-</div>
+<div id="creatorsList"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
-const supabase = supabaseJs.createClient("https://uurmdzzmzwumjtanlcvz.supabase.co","eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InV1cm1kenptend1bWp0YW5sY3Z6Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU3MDkwNDcsImV4cCI6MjA4MTI4NTA0N30.mVQKqbk0IZbXLrWMOvOqiB9OSHJgk09Wg0DsIJs0mhA");
+const supabase = supabase.createClient(
+  "TU_SUPABASE_URL",
+  "TU_SUPABASE_ANON_KEY"
+);
 
-async function loadCreators() {
-  const { data: loops, error } = await supabase.from("loops").select("*").eq("active",true);
-  const container = document.getElementById("creatorsList");
-  if(error){ container.innerHTML="<p>Error loading creators</p>"; return; }
-  if(!loops || loops.length===0){ container.innerHTML="<p style='opacity:.6'>No models live right now</p>"; return; }
-  
-  const owners = [...new Set(loops.map(l=>l.owner))];
-  owners.forEach(owner=>{
-    const card = document.createElement("div");
-    card.className="creator-card";
-    const link = document.createElement("a");
-    link.href=`/creator/live.html?creator=${encodeURIComponent(owner)}`;
-    link.innerHTML=`<span class="live-dot">🔴</span>${owner}`;
-    card.appendChild(link);
-    container.appendChild(card);
-  });
+const container = document.getElementById("creatorsList");
+
+async function loadLoops(){
+    const { data: loops, error } = await supabase.from('loops').select('*').eq('active', true);
+    if(error){ console.error(error); return; }
+
+    const owners = [...new Set(loops.map(l=>l.owner))];
+
+    owners.forEach(owner => {
+        const card = document.createElement('div');
+        card.className = "creator-card";
+        const link = document.createElement('a');
+        link.href = `/creator/live.html?user=${encodeURIComponent(owner)}`;
+        link.innerText = owner + " 🔴 LIVE";
+        card.appendChild(link);
+        container.appendChild(card);
+    });
 }
 
-loadCreators();
+loadLoops();
 </script>
 </body>
 </html>
