--- a/public/creator/index.html
+++ b/public/creator/index.html
@@ -12,35 +12,32 @@ button{background:red;color:white;cursor:pointer;}
 </style>
 </head>
 <body>
+
 <h1>Login / Signup</h1>
 <input type="email" id="email" placeholder="Enter your email" required>
 <br>
-<button id="loginBtn">Enter</button>
+<button onclick="login()">Enter</button>
 <div class="message" id="msg"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
-const supabase = supabase.createClient(
-  "TU_SUPABASE_URL",
-  "TU_SUPABASE_ANON_KEY"
-);
-
+const supabase = supabase.createClient("TU_SUPABASE_URL","TU_SUPABASE_ANON_KEY");
 const msg = document.getElementById("msg");
-const btn = document.getElementById("loginBtn");
 
-btn.addEventListener("click", async () => {
-    console.log("CLICK");
+async function login(){
     const email = document.getElementById("email").value.trim();
     if(!email){ msg.innerText="Enter a valid email"; return; }
 
     const { error } = await supabase.auth.signInWithOtp({ email });
-    if(error){ msg.innerText="Error sending login email"; console.error(error); return; }
+    if(error){ console.error(error); msg.innerText="Error sending login email"; return; }
+
     msg.innerText="Check your email to login!";
-});
+}
 
 supabase.auth.onAuthStateChange((event, session)=>{
     if(session) window.location.href="dashboard.html";
 });
 </script>
+
 </body>
 </html>
