--- a/public/index.html
+++ b/public/index.html
@@ -2,57 +2,41 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Virtual Model Hub</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Login / Signup - Creator</title>
 <style>
-body{margin:0;background:black;color:white;font-family:Arial;}
-.video-bg{position:fixed;top:0;left:0;width:100vw;height:100vh;object-fit:cover;z-index:-1;filter:brightness(0.6);}
-.overlay{position:absolute;top:0;left:0;width:100%;height:100%;background:linear-gradient(to bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.85));}
-.content{position:relative;height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;}
-h1{font-size:3rem;margin-bottom:15px;}
-p{font-size:1.2rem;opacity:0.8;margin-bottom:25px;}
-.creator-card{background:rgba(255,255,255,0.06);padding:15px 20px;border-radius:15px;margin:5px;}
-.creator-card a{color:white;text-decoration:none;font-weight:bold;}
-.footer{position:absolute;bottom:15px;font-size:0.8rem;opacity:0.6;}
+body{font-family:Arial;background:#111;color:white;text-align:center;padding:50px;}
+input,button{padding:10px 15px;margin:5px;border:none;border-radius:5px;}
+button{background:red;color:white;cursor:pointer;}
+.message{opacity:0.8;margin-top:10px;}
 </style>
 </head>
 <body>
 
-<video class="video-bg" autoplay muted loop playsinline>
-  <source src="loop.mp4" type="video/mp4">
-</video>
-<div class="overlay"></div>
-
-<div class="content">
-<h1>Live AI Models</h1>
-<p>24/7 · Virtual · NSFW</p>
-<div id="creatorsList"></div>
-<div class="footer">© Virtual Model Hub · 18+ Only</div>
-</div>
+<h1>Login / Signup</h1>
+<input type="email" id="email" placeholder="Enter your email" required>
+<br>
+<button onclick="login()">Enter</button>
+<div class="message" id="msg"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
-const supabase = supabase.createClient("https://uurmdzzmzwumjtanlcvz.supabase.co","eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InV1cm1kenptend1bWp0YW5sY3Z6Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU3MDkwNDcsImV4cCI6MjA4MTI4NTA0N30.mVQKqbk0IZbXLrWMOvOqiB9OSHJgk09Wg0DsIJs0mhA");
+const supabase = supabase.createClient("TU_SUPABASE_URL","TU_SUPABASE_ANON_KEY");
+const msg = document.getElementById("msg");
 
-async function loadCreators(){
-    const { data: loops } = await supabase.from("loops").select("*").eq("active", true);
-    const creatorsList = [...new Set(loops.map(l => l.owner))];
-    const container = document.getElementById("creatorsList");
+async function login(){
+    const email = document.getElementById("email").value.trim();
+    if(!email){ msg.innerText="Enter a valid email"; return; }
 
-    if(creatorsList.length===0){
-        container.innerHTML="<p style='opacity:.6'>No models live right now</p>";
-        return;
-    }
+    const { error } = await supabase.auth.signInWithOtp({ email });
+    if(error){ console.error(error); msg.innerText="Error sending login email"; return; }
 
-    creatorsList.forEach(user=>{
-        const card = document.createElement("div");
-        card.className="creator-card";
-        card.innerHTML=`<a href="/creator/live.html?user=${encodeURIComponent(user)}">🔴 ${user}</a>`;
-        container.appendChild(card);
-    });
+    msg.innerText="Check your email to login!";
 }
 
-loadCreators();
+supabase.auth.onAuthStateChange((event, session)=>{
+    if(session) window.location.href="dashboard.html";
+});
 </script>
 
 </body>
